# custom-aidoku-sources

./: .clippy.toml  .gitignore  AGENT.md  AGENTS.md  README.md  index.json  index.min.json  manifest.json  mise.toml  rustfmt.toml
.github/workflows/: release.yml  toonlivre-manifest.yml
docs/: toonlivre-api.md  toonlivre-security.md
extrator/: eslint.config.mjs  knip.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
extrator/bundles/: CHANGELOG.md
extrator/bundles/bundle_v1784464231_index-CDYuwq2u_js/: analysis.json  index-CDYuwq2u.js  metadata.json
extrator/docs/: README.md
extrator/manifest/: manifest.json
extrator/scripts/: run-built-cli.mjs
extrator/src/: ast.ts  cli.ts  compatibility.ts  constants.ts  download-bundle.ts  evaluate.ts  extract.ts  html.ts  http.ts  index.ts  manifest.ts  probe.ts  runtime.ts  validate.ts
extrator/tests/: helpers.ts
extrator/tests/unit/: html.test.ts  (+10 more)
manifest/: manifest.json  manifest_v1784613079.json  manifest_v20260718-2050.json
public/: index.json  index.min.json
public/sources/: pt-br.montetai-scanlator-v1778537025.aix  pt-br.montetai-scanlator-v8.aix
scripts/: extract-manifest.sh  refresh-manifest.sh  release.sh  serve.sh  setup-wireguard.sh  upload-wireguard-env.sh
sources/: pt-br.montetai-scanlator-v1784725325.aix  pt-br.toonlivre-v1784725325.aix
sources/pt_BR.montetaiscanlator/: Cargo.toml
sources/pt_BR.toonlivre/: Cargo.toml
sources/pt_BR.toonlivre/res/: manifest.json  source.json
sources/pt_BR.toonlivre/src/: api.rs  lib.rs  manifest.rs  source.rs  tests.rs  utils.rs
(+42 files in other folders)
